<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="@dimen/nav_header_padding"
    android:background="@drawable/background_header">

   <de.hdodenhof.circleimageview.CircleImageView
       android:id="@+id/ciHeader"
       android:layout_width="@dimen/circle_dimen"
       android:layout_height="@dimen/circle_dimen"
       android:contentDescription="@string/circle_description"
       android:src="@drawable/ic_superman"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_title"
        android:textColor="@android:color/white"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_name" />

</LinearLayout>