<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/tvTitle"
        style="@style/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/configTitle"
        android:layout_marginTop="@dimen/recyclerTopTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/recyclerTopTitle"
        android:layout_marginStart="@dimen/descriptionDimen"
        android:layout_marginEnd="@dimen/descriptionDimen"
        android:text="@string/configDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />


    <Button
        android:id="@+id/btnCamera"
        android:layout_width="match_parent"
        android:layout_height="@dimen/buttonHeight"
        android:text="@string/camara"
        style="@style/buttonRounded"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDescription"

        android:screenOrientation="landscape"/>

    <Button
        android:id="@+id/btnGallery"
        android:layout_width="match_parent"
        android:layout_height="@dimen/buttonHeight"
        android:text="@string/gallery"
        android:layout_marginTop="@dimen/recyclerTopTitle"
        style="@style/buttonRounded"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCamera"

        android:screenOrientation="landscape"/>
        <!-- configure this activity to use landscape orientation -->



</androidx.constraintlayout.widget.ConstraintLayout>