<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/z_shape_top_radius_corner"
    android:paddingTop="@dimen/bottomPadding"
    android:paddingStart="@dimen/bottomPadding"
    android:paddingEnd="@dimen/bottomPadding">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/widthPleca"
        android:layout_height="@dimen/heightPleca"
        android:layout_marginTop="@dimen/ivPlecaTop"
        android:background="@color/grisPleca"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCompletaDatos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tvTop"
        android:text="@string/bottomComplete"
        android:layout_marginStart="@dimen/tvCompletaStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        style="@style/tvBottomSheetStyle"/>

    <TextView
        android:id="@+id/tvQueOfrece"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tvTop"
        android:text="@string/tvOfrece"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCompletaDatos"
        style="@style/tvBottomSheetStyle"/>

    <com.google.android.material.chip.Chip
        android:id="@+id/chipProductos"
        android:layout_width="@dimen/chipWidth"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/rvTop"
        android:checkable="true"
        android:clickable="true"
        android:focusable="true"
        android:textColor="@color/z_text_chip_color"
        android:text="@string/productos"
        android:textAlignment="center"
        app:checkedIconEnabled="false"
        app:chipBackgroundColor="@color/z_background_chip_color"
        app:chipStrokeColor="@color/z_stroke_chip_color"
        app:chipStrokeWidth="@dimen/strokeChip"
        app:layout_constraintStart_toStartOf="@+id/tvCompletaDatos"
        app:layout_constraintTop_toBottomOf="@+id/tvQueOfrece" />


    <com.google.android.material.chip.Chip
        android:id="@+id/chipServicios"
        android:layout_width="@dimen/chipWidth"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/rvTop"
        android:checkable="true"
        android:clickable="true"
        android:focusable="true"
        android:textColor="@color/z_text_chip_color"
        android:text="@string/servicios"
        android:textAlignment="center"
        app:checkedIconEnabled="false"
        app:chipBackgroundColor="@color/z_background_chip_color"
        app:chipStrokeColor="@color/z_stroke_chip_color"
        app:chipStrokeWidth="@dimen/strokeChip"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@+id/chipProductos"
        app:layout_constraintTop_toBottomOf="@+id/tvQueOfrece" />

    <TextView
        android:id="@+id/tvCategoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/categoria"
        android:layout_marginStart="@dimen/tvCompletaStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chipProductos"
        style="@style/tvBottomSheetStyle"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"

        style="@style/Widget.AppCompat.Spinner.Underlined"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvCategoria"
        app:layout_constraintTop_toBottomOf="@+id/tvCategoria" />


    <TextView
        android:id="@+id/tvEligeDia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Elige los días y horarios de atención \nde tu negocio"
        android:layout_marginStart="@dimen/tvCompletaStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        style="@style/tvBottomSheetStyle"/>


    <com.google.android.material.chip.Chip
        android:id="@+id/chipDisponible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/rvTop"
        android:checkable="true"
        android:clickable="true"
        android:focusable="true"
        android:text="Disponible 24/7"
        android:textAlignment="center"
        android:textColor="@color/z_text_chip_color"
        app:checkedIconEnabled="false"
        app:chipBackgroundColor="@color/z_background_chip_color"
        app:chipStrokeColor="@color/z_stroke_chip_color"
        app:chipStrokeWidth="@dimen/strokeChip"
        app:layout_constraintStart_toStartOf="@+id/tvEligeDia"
        app:layout_constraintTop_toBottomOf="@+id/tvEligeDia" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chipPersonaliza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/rvTop"
        android:checkable="true"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginStart="15dp"
        android:text="Personalizar horarios"
        android:textAlignment="center"
        android:textColor="@color/z_text_chip_color"
        app:checkedIconEnabled="false"
        app:chipBackgroundColor="@color/z_background_chip_color"
        app:chipStrokeColor="@color/z_stroke_chip_color"
        app:chipStrokeWidth="@dimen/strokeChip"
        app:layout_constraintStart_toEndOf="@+id/chipDisponible"
        app:layout_constraintTop_toBottomOf="@+id/tvEligeDia" />


    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="10dp"
        android:text="Registrar"
        android:textAllCaps="false"
        android:backgroundTint="@color/greenBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chipPersonaliza" />

</androidx.constraintlayout.widget.ConstraintLayout>